# warehouse-robot-env

./: .env.example  .gitignore  Dockerfile  README.md  __init__.py  _compliance_test.py  client.py  hackathon_validate.py  inference.py  inference_local.txt  inference_output.txt  inference_remote.txt  models.py  openenv.yaml  pyproject.toml
server/: Dockerfile  app.py  environment.py  requirements.txt
shatterdome/: grid.py  jaeger.py  renderer.py  robot.py
tasks/: graders.py
warehouse/: grid.py  renderer.py  robot.py
